@@ -444,7 +444,7 @@
       <dependency>
         <groupId>com.carrotsearch.randomizedtesting</groupId>
         <artifactId>randomizedtesting-runner</artifactId>
-        <version>2.0.4</version>
+        <version>2.0.5</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
